logs/dag_id=main_dag/run_id=scheduled__2022-10-01T000000+0000/task_id=create_company_dim_table/attempt=1.log
[2022-10-02 00:02:03,285] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: main_dag.create_company_dim_table scheduled__2022-10-01T00:00:00+00:00 [queued]>
[2022-10-02 00:02:03,297] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: main_dag.create_company_dim_table scheduled__2022-10-01T00:00:00+00:00 [queued]>
[2022-10-02 00:02:03,297] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-10-02 00:02:03,298] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-10-02 00:02:03,299] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-10-02 00:02:03,318] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_company_dim_table> on 2022-10-01 00:00:00+00:00
[2022-10-02 00:02:03,323] {standard_task_runner.py:52} INFO - Started process 5266 to run task
[2022-10-02 00:02:03,328] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'main_dag', 'create_company_dim_table', 'scheduled__2022-10-01T00:00:00+00:00', '--job-id', '122', '--raw', '--subdir', 'DAGS_FOLDER/main_dag.py', '--cfg-path', '/tmp/tmpfb2ewzzw', '--error-file', '/tmp/tmp6bvgfnvg']
[2022-10-02 00:02:03,330] {standard_task_runner.py:80} INFO - Job 122: Subtask create_company_dim_table
[2022-10-02 00:02:03,397] {task_command.py:369} INFO - Running <TaskInstance: main_dag.create_company_dim_table scheduled__2022-10-01T00:00:00+00:00 [running]> on host 8fa0dcc1c8f5
[2022-10-02 00:02:03,489] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=main_dag
AIRFLOW_CTX_TASK_ID=create_company_dim_table
AIRFLOW_CTX_EXECUTION_DATE=2022-10-01T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-10-01T00:00:00+00:00
[2022-10-02 00:02:03,499] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-10-02 00:02:03,504] {dbapi.py:208} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS company_dim_table (
                Company_Full_Name TEXT NOT NULL,
                Last_Price NULL,
                Shariah TEXT NOT NULL,
                Sector TEXT NOT NULL,
                Company_Key TEXT NOT NULL
            );
        , parameters: None
[2022-10-02 00:02:03,506] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "NULL"
LINE 4:                 Last_Price NULL,
                                   ^

[2022-10-02 00:02:03,519] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=main_dag, task_id=create_company_dim_table, execution_date=20221001T000000, start_date=20221002T000203, end_date=20221002T000203
[2022-10-02 00:02:03,538] {standard_task_runner.py:97} ERROR - Failed to execute job 122 for task create_company_dim_table (syntax error at or near "NULL"
LINE 4:                 Last_Price NULL,
                                   ^
; 5266)
[2022-10-02 00:02:03,581] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-10-02 00:02:03,656] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
